Removed reference to ImmutableMap